src/grammar/antlrOutput/odeGrammarParser.js
// Generated from e:\projects\SolversJS\src\grammar\odeGrammar.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var odeGrammarVisitor = require('./odeGrammarVisitor').odeGrammarVisitor;

var grammarFileName = "odeGrammar.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'#'", "'(t0)'", "'[0]'", "'set'", "'on'", "'from'", 
                     "'der'", "'terminal'", "'sum'", "'macro'", "'for'", 
                     "'in'", "'if'", "'else'", "'local'", "'constant'", 
                     null, null, null, "'+'", "'-'", "'*'", "'/'", "'('", 
                     "')'", "'.'", "','", "'^'", "'<'", "'>'", "'<='", "'>='", 
                     "'!='", "'='", null, null, null, "';'", "':'", "'['", 
                     "']'", "'{'", "'}'", "'''", "'?'" ];

var symbolicNames = [ null, null, "T0", "ZEROSQR", "SET", "ON", "FROM", 
                      "DER", "TERMINAL", "SUM", "MACRO", "FOR", "IN", "IF", 
                      "ELSE", "LOCAL", "CONSTANT", "FLOAT", "INT", "ID", 
                      "PLUS", "MINUS", "ASTERISK", "DIVISION", "LPAREN", 
                      "RPAREN", "DOT", "COMMA", "CARET", "L", "G", "LE", 
                      "GE", "NE", "E", "OR", "AND", "NOT", "SEMICOLON", 
                      "COLON", "LSQR", "RSQR", "LCRL", "RCRL", "APOSTROPHE", 
                      "QUESTIONMARK", "STRING", "NEWLINE", "WHITESPACE", 
                      "COMMENT" ];

var ruleNames =  [ "ode", "odeStatement", "hybrid", "number", "statement", 
                   "varIdentifier", "loopBody", "macroStatement", "macroArguments", 
                   "loop", "equation", "setter", "initialCondition", "constantStatement", 
                   "event", "stateTransition", "unaryOperator", "boolExpression", 
                   "expression", "functionArguments" ];

function odeGrammarParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

odeGrammarParser.prototype = Object.create(antlr4.Parser.prototype);
odeGrammarParser.prototype.constructor = odeGrammarParser;

Object.defineProperty(odeGrammarParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

odeGrammarParser.EOF = antlr4.Token.EOF;
odeGrammarParser.T__0 = 1;
odeGrammarParser.T0 = 2;
odeGrammarParser.ZEROSQR = 3;
odeGrammarParser.SET = 4;
odeGrammarParser.ON = 5;
odeGrammarParser.FROM = 6;
odeGrammarParser.DER = 7;
odeGrammarParser.TERMINAL = 8;
odeGrammarParser.SUM = 9;
odeGrammarParser.MACRO = 10;
odeGrammarParser.FOR = 11;
odeGrammarParser.IN = 12;
odeGrammarParser.IF = 13;
odeGrammarParser.ELSE = 14;
odeGrammarParser.LOCAL = 15;
odeGrammarParser.CONSTANT = 16;
odeGrammarParser.FLOAT = 17;
odeGrammarParser.INT = 18;
odeGrammarParser.ID = 19;
odeGrammarParser.PLUS = 20;
odeGrammarParser.MINUS = 21;
odeGrammarParser.ASTERISK = 22;
odeGrammarParser.DIVISION = 23;
odeGrammarParser.LPAREN = 24;
odeGrammarParser.RPAREN = 25;
odeGrammarParser.DOT = 26;
odeGrammarParser.COMMA = 27;
odeGrammarParser.CARET = 28;
odeGrammarParser.L = 29;
odeGrammarParser.G = 30;
odeGrammarParser.LE = 31;
odeGrammarParser.GE = 32;
odeGrammarParser.NE = 33;
odeGrammarParser.E = 34;
odeGrammarParser.OR = 35;
odeGrammarParser.AND = 36;
odeGrammarParser.NOT = 37;
odeGrammarParser.SEMICOLON = 38;
odeGrammarParser.COLON = 39;
odeGrammarParser.LSQR = 40;
odeGrammarParser.RSQR = 41;
odeGrammarParser.LCRL = 42;
odeGrammarParser.RCRL = 43;
odeGrammarParser.APOSTROPHE = 44;
odeGrammarParser.QUESTIONMARK = 45;
odeGrammarParser.STRING = 46;
odeGrammarParser.NEWLINE = 47;
odeGrammarParser.WHITESPACE = 48;
odeGrammarParser.COMMENT = 49;

odeGrammarParser.RULE_ode = 0;
odeGrammarParser.RULE_odeStatement = 1;
odeGrammarParser.RULE_hybrid = 2;
odeGrammarParser.RULE_number = 3;
odeGrammarParser.RULE_statement = 4;
odeGrammarParser.RULE_varIdentifier = 5;
odeGrammarParser.RULE_loopBody = 6;
odeGrammarParser.RULE_macroStatement = 7;
odeGrammarParser.RULE_macroArguments = 8;
odeGrammarParser.RULE_loop = 9;
odeGrammarParser.RULE_equation = 10;
odeGrammarParser.RULE_setter = 11;
odeGrammarParser.RULE_initialCondition = 12;
odeGrammarParser.RULE_constantStatement = 13;
odeGrammarParser.RULE_event = 14;
odeGrammarParser.RULE_stateTransition = 15;
odeGrammarParser.RULE_unaryOperator = 16;
odeGrammarParser.RULE_boolExpression = 17;
odeGrammarParser.RULE_expression = 18;
odeGrammarParser.RULE_functionArguments = 19;


function OdeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_ode;
    return this;
}

OdeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OdeContext.prototype.constructor = OdeContext;

OdeContext.prototype.odeStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(OdeStatementContext);
    } else {
        return this.getTypedRuleContext(OdeStatementContext,i);
    }
};

OdeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitOde(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.OdeContext = OdeContext;

odeGrammarParser.prototype.ode = function() {

    var localctx = new OdeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, odeGrammarParser.RULE_ode);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 43;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << odeGrammarParser.T__0) | (1 << odeGrammarParser.DER) | (1 << odeGrammarParser.SUM) | (1 << odeGrammarParser.MACRO) | (1 << odeGrammarParser.FOR) | (1 << odeGrammarParser.CONSTANT) | (1 << odeGrammarParser.FLOAT) | (1 << odeGrammarParser.INT) | (1 << odeGrammarParser.ID) | (1 << odeGrammarParser.PLUS) | (1 << odeGrammarParser.MINUS) | (1 << odeGrammarParser.LPAREN))) !== 0) || _la===odeGrammarParser.LCRL) {
            this.state = 40;
            this.odeStatement();
            this.state = 45;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function OdeStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_odeStatement;
    return this;
}

OdeStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
OdeStatementContext.prototype.constructor = OdeStatementContext;

OdeStatementContext.prototype.equation = function() {
    return this.getTypedRuleContext(EquationContext,0);
};

OdeStatementContext.prototype.initialCondition = function() {
    return this.getTypedRuleContext(InitialConditionContext,0);
};

OdeStatementContext.prototype.constantStatement = function() {
    return this.getTypedRuleContext(ConstantStatementContext,0);
};

OdeStatementContext.prototype.macroStatement = function() {
    return this.getTypedRuleContext(MacroStatementContext,0);
};

OdeStatementContext.prototype.loop = function() {
    return this.getTypedRuleContext(LoopContext,0);
};

OdeStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitOdeStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.OdeStatementContext = OdeStatementContext;

odeGrammarParser.prototype.odeStatement = function() {

    var localctx = new OdeStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, odeGrammarParser.RULE_odeStatement);
    try {
        this.state = 51;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 46;
            this.equation();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 47;
            this.initialCondition();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 48;
            this.constantStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 49;
            this.macroStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 50;
            this.loop();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function HybridContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_hybrid;
    return this;
}

HybridContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
HybridContext.prototype.constructor = HybridContext;

HybridContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

HybridContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitHybrid(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.HybridContext = HybridContext;

odeGrammarParser.prototype.hybrid = function() {

    var localctx = new HybridContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, odeGrammarParser.RULE_hybrid);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 56;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << odeGrammarParser.T__0) | (1 << odeGrammarParser.DER) | (1 << odeGrammarParser.TERMINAL) | (1 << odeGrammarParser.SUM) | (1 << odeGrammarParser.MACRO) | (1 << odeGrammarParser.FOR) | (1 << odeGrammarParser.CONSTANT) | (1 << odeGrammarParser.FLOAT) | (1 << odeGrammarParser.INT) | (1 << odeGrammarParser.ID) | (1 << odeGrammarParser.PLUS) | (1 << odeGrammarParser.MINUS) | (1 << odeGrammarParser.LPAREN))) !== 0) || _la===odeGrammarParser.LCRL) {
            this.state = 53;
            this.statement();
            this.state = 58;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function NumberContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_number;
    this.value = null; // Token
    return this;
}

NumberContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NumberContext.prototype.constructor = NumberContext;

NumberContext.prototype.FLOAT = function() {
    return this.getToken(odeGrammarParser.FLOAT, 0);
};

NumberContext.prototype.INT = function() {
    return this.getToken(odeGrammarParser.INT, 0);
};

NumberContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitNumber(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.NumberContext = NumberContext;

odeGrammarParser.prototype.number = function() {

    var localctx = new NumberContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, odeGrammarParser.RULE_number);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        localctx.value = this._input.LT(1);
        _la = this._input.LA(1);
        if(!(_la===odeGrammarParser.FLOAT || _la===odeGrammarParser.INT)) {
            localctx.value = this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.equation = function() {
    return this.getTypedRuleContext(EquationContext,0);
};

StatementContext.prototype.initialCondition = function() {
    return this.getTypedRuleContext(InitialConditionContext,0);
};

StatementContext.prototype.constantStatement = function() {
    return this.getTypedRuleContext(ConstantStatementContext,0);
};

StatementContext.prototype.macroStatement = function() {
    return this.getTypedRuleContext(MacroStatementContext,0);
};

StatementContext.prototype.loop = function() {
    return this.getTypedRuleContext(LoopContext,0);
};

StatementContext.prototype.event = function() {
    return this.getTypedRuleContext(EventContext,0);
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.StatementContext = StatementContext;

odeGrammarParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, odeGrammarParser.RULE_statement);
    try {
        this.state = 67;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 61;
            this.equation();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 62;
            this.initialCondition();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 63;
            this.constantStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 64;
            this.macroStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 65;
            this.loop();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 66;
            this.event();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarIdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_varIdentifier;
    this.index = null; // ExpressionContext
    return this;
}

VarIdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarIdentifierContext.prototype.constructor = VarIdentifierContext;

VarIdentifierContext.prototype.ID = function() {
    return this.getToken(odeGrammarParser.ID, 0);
};

VarIdentifierContext.prototype.LSQR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(odeGrammarParser.LSQR);
    } else {
        return this.getToken(odeGrammarParser.LSQR, i);
    }
};


VarIdentifierContext.prototype.RSQR = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(odeGrammarParser.RSQR);
    } else {
        return this.getToken(odeGrammarParser.RSQR, i);
    }
};


VarIdentifierContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

VarIdentifierContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitVarIdentifier(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.VarIdentifierContext = VarIdentifierContext;

odeGrammarParser.prototype.varIdentifier = function() {

    var localctx = new VarIdentifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, odeGrammarParser.RULE_varIdentifier);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 69;
        this.match(odeGrammarParser.ID);
        this.state = 76;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 70;
                this.match(odeGrammarParser.LSQR);
                this.state = 71;
                localctx.index = this.expression(0);
                this.state = 72;
                this.match(odeGrammarParser.RSQR); 
            }
            this.state = 78;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function LoopBodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_loopBody;
    return this;
}

LoopBodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LoopBodyContext.prototype.constructor = LoopBodyContext;

LoopBodyContext.prototype.LCRL = function() {
    return this.getToken(odeGrammarParser.LCRL, 0);
};

LoopBodyContext.prototype.RCRL = function() {
    return this.getToken(odeGrammarParser.RCRL, 0);
};

LoopBodyContext.prototype.equation = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(EquationContext);
    } else {
        return this.getTypedRuleContext(EquationContext,i);
    }
};

LoopBodyContext.prototype.initialCondition = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(InitialConditionContext);
    } else {
        return this.getTypedRuleContext(InitialConditionContext,i);
    }
};

LoopBodyContext.prototype.constantStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ConstantStatementContext);
    } else {
        return this.getTypedRuleContext(ConstantStatementContext,i);
    }
};

LoopBodyContext.prototype.loop = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LoopContext);
    } else {
        return this.getTypedRuleContext(LoopContext,i);
    }
};

LoopBodyContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitLoopBody(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.LoopBodyContext = LoopBodyContext;

odeGrammarParser.prototype.loopBody = function() {

    var localctx = new LoopBodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, odeGrammarParser.RULE_loopBody);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 79;
        this.match(odeGrammarParser.LCRL);
        this.state = 86;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << odeGrammarParser.T__0) | (1 << odeGrammarParser.DER) | (1 << odeGrammarParser.SUM) | (1 << odeGrammarParser.FOR) | (1 << odeGrammarParser.CONSTANT) | (1 << odeGrammarParser.FLOAT) | (1 << odeGrammarParser.INT) | (1 << odeGrammarParser.ID) | (1 << odeGrammarParser.PLUS) | (1 << odeGrammarParser.MINUS) | (1 << odeGrammarParser.LPAREN))) !== 0) || _la===odeGrammarParser.LCRL) {
            this.state = 84;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
            switch(la_) {
            case 1:
                this.state = 80;
                this.equation();
                break;

            case 2:
                this.state = 81;
                this.initialCondition();
                break;

            case 3:
                this.state = 82;
                this.constantStatement();
                break;

            case 4:
                this.state = 83;
                this.loop();
                break;

            }
            this.state = 88;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 89;
        this.match(odeGrammarParser.RCRL);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MacroStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_macroStatement;
    this.name = null; // Token
    this.exp = null; // ExpressionContext
    return this;
}

MacroStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MacroStatementContext.prototype.constructor = MacroStatementContext;

MacroStatementContext.prototype.MACRO = function() {
    return this.getToken(odeGrammarParser.MACRO, 0);
};

MacroStatementContext.prototype.LPAREN = function() {
    return this.getToken(odeGrammarParser.LPAREN, 0);
};

MacroStatementContext.prototype.macroArguments = function() {
    return this.getTypedRuleContext(MacroArgumentsContext,0);
};

MacroStatementContext.prototype.RPAREN = function() {
    return this.getToken(odeGrammarParser.RPAREN, 0);
};

MacroStatementContext.prototype.SEMICOLON = function() {
    return this.getToken(odeGrammarParser.SEMICOLON, 0);
};

MacroStatementContext.prototype.ID = function() {
    return this.getToken(odeGrammarParser.ID, 0);
};

MacroStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

MacroStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitMacroStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.MacroStatementContext = MacroStatementContext;

odeGrammarParser.prototype.macroStatement = function() {

    var localctx = new MacroStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, odeGrammarParser.RULE_macroStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(odeGrammarParser.MACRO);
        this.state = 92;
        localctx.name = this.match(odeGrammarParser.ID);
        this.state = 93;
        this.match(odeGrammarParser.LPAREN);
        this.state = 94;
        this.macroArguments();
        this.state = 95;
        this.match(odeGrammarParser.RPAREN);
        this.state = 96;
        localctx.exp = this.expression(0);
        this.state = 97;
        this.match(odeGrammarParser.SEMICOLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MacroArgumentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = odeGrammarParser.RULE_macroArguments;
    return this;
}

MacroArgumentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MacroArgumentsContext.prototype.constructor = MacroArgumentsContext;

MacroArgumentsContext.prototype.ID = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(odeGrammarParser.ID);
    } else {
        return this.getToken(odeGrammarParser.ID, i);
    }
};


MacroArgumentsContext.prototype.COMMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(odeGrammarParser.COMMA);
    } else {
        return this.getToken(odeGrammarParser.COMMA, i);
    }
};


MacroArgumentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof odeGrammarVisitor ) {
        return visitor.visitMacroArguments(this);
    } else {
        return visitor.visitChildren(this);
    }
};




odeGrammarParser.MacroArgumentsContext = MacroArgumentsContext;

odeGrammarParser.prototype.macroArguments = function() {
